2007-11-19  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (#document-tree Document): Output |inputEncoding|, 
	|manakaiCharset|, and |manakaiHasBOM| attributes.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: New rules for warnings.

	* cc-todo.en.txt: Updated.

	* cc.cgi: Default to |Windows-1252| instead of |ISO-8859-1|
	for |inner_html| with external source.  Set |manakai_charset|
	attribute if possible.
	(load_text_catalog): Interpret catalog file as UTF-8.

	* error-description-source.en.xml: New errors for character
	encodings are added.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: s/charset declaration/character
	encoding declaration/g, since HTML5 spec says so.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_input_document): Use sniffer to determine
	media type of the entity.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Rules for "unsupported" parse errors.

	* cc.cgi (print_syntax_error_html_section): Use HTML
	parser for byte string.
	(print_result_unknown_type_section): Make output
	more consistent with other media types.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* parser.cgi: Use |Whatpm::HTML::Serializer| to serialize
	an HTML DOM.

2007-11-07  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Styling examples.

2007-11-07  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml (enumerated:invalid:http-equiv:content-type):
	New.

2007-11-05  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_level_label): New.

	* cc-style.css: New rules for error level descriptions.

	* error-description-source.xml: Description for error
	levels is added.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* cc-interface.en.html (i): |text/cache-manifest| is added.

	* cc-style.css: New rules for manifest dump.

	* cc.cgi: Support for |text/cache-manifest|.

	* error-description-soruce.en.xml (#cache-manifest-errors): New
	section.

2007-09-10  Wakaba  <wakaba@suika.fam.cx>
