@@ -1,8 +1,9 @@
 m:character encoding;format-charset must;Character encoding <code><var>$0</var></code> is not allowed for <abbr>HTML</abbr> document.
 s:character encoding;format-charset should;Character encoding <code><var>$0</var></code> should not be used for <abbr>HTML</abbr> document.
 w:character encoding;format-charset warning;Use of UTF-8 is encouraged.
+unsupported:character encoding;format-charset unsupported;Conformance for character encoding requirements cannot be checked.
 m:no character encoding declaration;format-charset error;There is no character encoding declaration.
-m:non ascii superset;format-charset error;No character encoding metadata is found in upper‐level protocol nor is there <abbr>BOM</abbr>, while character encoding <code><var>$0</var></code> is not a superset of <abbr>ASCII</abbr>.
+m:non ascii superset;format-charset error;No character encoding metadata is found in lower‐level protocol nor is there <abbr>BOM</abbr>, while character encoding <code><var>$0</var></code> is not a superset of <abbr>ASCII</abbr>.
 w:charset label detected;format-charset warning;While parsing the document as <code><var>$0</var></code>, a character encoding declaration specifying character encoding as <code><var>$1</var></code> is found. The document is reparsed.
 after html;parse-error;Tag <code>&lt;<var>$0</var>&gt;</code> is not allowed after the end tag <code>&lt;/html&gt;</code>.
 after body;parse-error;Tag <code>&lt;<var>$0</var>&gt;</code> is not allowed after the end tag <code>&lt;/body&gt;</code>.
@@ -42,11 +43,15 @@ in HTML:xml:lang;attribute-error;The <code>xml:lang</code> attribute is not allo
 in XML:charset;attribute-error;The <code>charset</code> attribute is not allowed in XML document.
 in XML:lang;attribute-error;The <code>lang</code> attribute is not allowed in XML document.
 in XML:xmlns;attribute-error;The <code>xmlns</code> attribute in the <code>null</code> namespace is not allowed in XHTML document. The document is non-conforming.
+w:charset:not registered;attribute-value-warning warning;Character encoding name <code><var>$0</var></code> is not registered.
+w:charset:private;attribute-value-warning warning;<code><var>$0</var></code> is a private character encoding name.
+m:charset:syntax error;attribute-value-error;The specified value is syntactically not a character encoding name.
 enumerated:invalid;attribute-value-error;This attribute only allow a limited set of values and the specified value <code><var>{@}</var></code> is not one of them.
 enumerated:invalid:http-equiv:content-type;attribute-value-error;Character encoding declaration syntax <code class="html bad example">&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=<var>charset-name</var>&quot;&gt;</code> is obsolete.
 duplicate ID;attribute-value-error;This identifier has already been assigned to another element.
 link type:bad context;attribute-value-error;The link type <code><var>$0</var></code> cannot be specified for this element.
 link type:non-conforming;attribute-value-error;The link type <code><var>$0</var></code> is non-conforming.
+m:mismatched charset name;attribute-value-error;Character encoding name <code><var>$1</var></code> is different from document character encoding <code><var>$0</var></code>.
 reserved browsing context name;attribute-value-error;Browsing context name <code><var>{@}</var></code> is reserved.
 s:link type:proposed;attribute-value-warning should;Link type <code><var>$0</var></code> is proposed but not accepted yet; it <em>should not</em> be used until it has been accepted.
 table:colspan creates column with no anchored cell;table-model-error;This <code>colspan</code> attribute results in creating a table column that does not contain any cell anchored to it.
