@@ -43,6 +43,19 @@ Web Document Conformance Checker (BETA)</title>
   </d:desc>
 </d:item>
 
+<d:item name="character encoding" class="format-charset unsupported"
+    level="unsupported">
+  <d:message xml:lang="en">Conformance for character encoding requirements
+  cannot be checked.</d:message>
+  <d:desc xml:lang="en">
+    <p>The conformance checker cannot detect whether the input document
+    met the requirements on character encoding, since the document
+    is not inputed as a serialized byte sequence.  The document is
+    not conforming if it is not encoded in an appropriate character
+    encoding with appropriate labeling.</p>
+  </d:desc>
+</d:item>
+
 <d:item name="no character encoding declaration" class="format-charset error"
     level="m">
   <d:message xml:lang="en">There is no character encoding
@@ -50,7 +63,7 @@ Web Document Conformance Checker (BETA)</title>
   <d:desc xml:lang="en">
     <p>The document does not contain a character encoding 
     declaration.  Unless the character encoding is explicitly 
-    specified in upper‐level protocol, e.g. in <abbr>HTTP</abbr>,
+    specified in lower‐level protocol, e.g. in <abbr>HTTP</abbr>,
     or is implied by <abbr>BOM</abbr>, there must be a character
     encoding declaration.  The document is non‐conforming.</p>
 
@@ -67,12 +80,12 @@ Web Document Conformance Checker (BETA)</title>
 <d:item name="non ascii superset" class="format-charset error"
     level="m">
   <d:message xml:lang="en">No character encoding metadata is found
-  in upper‐level protocol nor is there <abbr>BOM</abbr>, while
+  in lower‐level protocol nor is there <abbr>BOM</abbr>, while
   character encoding <code><var>$0</var></code>
   is not a superset of <abbr>ASCII</abbr>.</d:message>
   <d:desc xml:lang="en">
     <p>The document is not labeled with character encoding name
-    in upper‐level protocol, e.g. in <abbr>HTTP</abbr>, and
+    in lower‐level protocol, e.g. in <abbr>HTTP</abbr>, and
     the document is not begin with <abbr>BOM</abbr>.  In addition,
     the character encoding of the document is not a superset of
     <abbr>ASCII</abbr>.  The document is non‐conforming.</p>
@@ -1004,6 +1017,87 @@ p {
 <section id="attribute-value-errors">
 <h2>Attribute Value Errors</h2>
 
+<d:item name="charset:not registered" class="attribute-value-warning warning"
+    level="w">
+  <d:message xml:lang="en">Character encoding name <code><var>$0</var></code>
+  is not registered.</d:message>
+  <d:desc xml:lang="en">
+    <p>The specified character encoding name is not registered to
+    <abbr>IANA</abbr>.  Use of registered character encoding name
+    is a good practice to facilitate interoperability.</p>
+
+    <dl class="switch">
+    <dt><code>EUC-TW</code></dt>
+      <dd><code>EUC-TW</code> is not registered.  Unfortunately, there
+      is no registered name for that character encoding.  Use
+      Big5 encoding with character encoding name <code>Big5</code> 
+      if it is enough to represent the document.</dd>
+    <dt><code>ISO-2022-JP-1</code></dt>
+      <dd><code>ISO-2022-JP-1</code> is not registered, nevertheless
+      this character encoding name is documented in 
+      <a href="urn:ietf:rfc:2237"><abbr>RFC</abbr> 2237</a>.  Use
+      <code>ISO-2022-JP-2</code> instead, since that character encoding
+      is a superset of ISO-2022-JP-1.</dd>
+    <dt><code>ISO-2022-JP-3</code>, <code>ISO-2022-JP-3-plane1</code></dt>
+      <dd>These names are not registered and obsoleted in favor of
+      <code>ISO-2022-JP-2004</code> and
+      <code>ISO-2022-JP-2004-plane1</code>.</dd>
+    <dt><code>ISO-2022-JP-2003</code>,
+    <code>ISO-2022-JP-2003-plane1</code></dt>
+      <dd>These names are not registered and corrected to
+      <code>ISO-2022-JP-2004</code> and
+      <code>ISO-2022-JP-2004-plane1</code>.</dd>
+    <dt><code>ISO-2022-JP-2004</code>,
+    <code>ISO-2022-JP-2004-plane1</code></dt>
+      <dd>These names are not registered.  Unfortunately, there is 
+      no registered name for these character encodings.</dd>
+    <dt><code>UTF-8N</code></dt>
+      <dd><code>UTF-8N</code> is not registered.  Character encoding
+      name <code>UTF-8</code> represents UTF-8 encoding with or
+      without <abbr>BOM</abbr>.</dd>
+    </dl>
+
+    <p><strong>WARNING</strong>: This error might be raised for
+    a registered character encoding name, since the character encoding
+    name database of the conformance checker is not complete yet.</p>
+  </d:desc>
+</d:item>
+
+<d:item name="charset:private" class="attribute-value-warning warning"
+    level="w">
+  <d:message xml:lang="en"><code><var>$0</var></code> is a private
+  character encoding name.</d:message>
+  <d:desc xml:lang="en">
+    <p>The specified character encoding name is a private name and
+    not registered to <abbr>IANA</abbr>.  Use of registered character
+    encoding name is a good practice to facilitate interoperability.</p>
+
+    <dl class="switch">
+    <dt><code>x-euc-jp</code></dt>
+      <dd>Use <code>EUC-JP</code> for the Japanese <abbr>EUC</abbr>
+      character encoding.</dd>
+    <dt><code>x-sjis</code></dt>
+      <dd>Use <code>Shift_JIS</code> for standard Shift encoding scheme of
+      <abbr>JIS</abbr> coded character set, or <code>Windows-31J</code>
+      for Microsoft standard character set as implemented by
+      Microsoft Windows.</dd>
+    </dl>
+  </d:desc>
+</d:item>
+
+<d:item name="charset:syntax error" class="attribute-value-error"
+    level="m">
+  <d:message xml:lang="en">The specified value is syntactically not a
+  character encoding name.</d:message>
+  <d:desc xml:lang="en">
+    <p>The attribute value must be a character encoding name.  However,
+    the specified value is not a character encoding name syntactically.
+    The document is non‐conforming.</p>
+    <p>Character encoding name is a string of <abbr>ASCII</abbr>
+    printable characters, up to 40 characters.</p>
+  </d:desc>
+</d:item>
+
 <d:item name="enumerated:invalid"
     class="attribute-value-error">
   <d:message xml:lang="en">This attribute only allow a limited set of 
@@ -1099,6 +1193,18 @@ p {
     </dl>
   </d:desc>
 </d:item>
+
+<d:item name="mismatched charset name" class="attribute-value-error"
+    level="m">
+  <d:message xml:lang="en">Character encoding name <code><var>$1</var></code>
+  is different from document character encoding
+  <code><var>$0</var></code>.</d:message>
+  <d:desc xml:lang="en">
+    <p>The specified character encoding name is different from
+    the character encoding of the document.  The document
+    is non‐conforming.</p>
+  </d:desc>
+</d:item> 
 
 <d:item name="reserved browsing context name"
     class="attribute-value-error">
@@ -1490,6 +1596,6 @@ is used in the document.</td>
 and/or modify it under the same terms as Perl itself.</p>
 </section>
 
-<!-- $Date: 2007/11/18 11:05:12 $ -->
+<!-- $Date: 2007/11/23 06:36:19 $ -->
 </body>
 </html>
